fixed some minor warnings | new delegating crawling method in TikaUtils